src/test/deca/syntax/invalid/sansObjet/BadPrintxWithBraces.deca
{
    printx{"Hello 2020"};
}